[gd_scene load_steps=14 format=2]

[ext_resource path="res://vid00002/Node2D.tscn" type="PackedScene" id=1]
[ext_resource path="res://vid00002/canvas_process.gdshader" type="Shader" id=2]
[ext_resource path="res://vid00002/display_rain.gdshader" type="Shader" id=3]
[ext_resource path="res://vid00002/back.png" type="Texture" id=4]
[ext_resource path="res://vid00002/rain_shader_00.gd" type="Script" id=5]

[sub_resource type="ViewportTexture" id=12]
viewport_path = NodePath("Viewport")

[sub_resource type="OpenSimplexNoise" id=18]
period = 2.0

[sub_resource type="NoiseTexture" id=19]
seamless = true
noise = SubResource( 18 )

[sub_resource type="ShaderMaterial" id=11]
resource_local_to_scene = true
shader = ExtResource( 2 )
shader_param/rainDirection = Vector2( 0, -0.01 )
shader_param/screenPlayerPos = Vector2( 0.5, 0.48 )
shader_param/playerRotation = 0.804
shader_param/playerBoxSize = Vector2( 0.008, 0.019 )
shader_param/playerPosPropagation = Vector2( 0.95, 0.95 )
shader_param/canvasChannelDegrade = Vector3( 0.999, 0, 0.995 )
shader_param/playerPosDiffusion = 0.5
shader_param/canvasDiffusion = 0.0
shader_param/inputLayer = SubResource( 12 )
shader_param/rainNoise = SubResource( 19 )

[sub_resource type="ViewportTexture" id=5]
viewport_path = NodePath("Viewport")

[sub_resource type="ViewportTexture" id=15]
viewport_path = NodePath("Viewport4")

[sub_resource type="ShaderMaterial" id=14]
resource_local_to_scene = true
shader = ExtResource( 3 )
shader_param/rainMaskClip = 0.5
shader_param/rainMaskBias = 5.0
shader_param/color = Color( 0, 0.564706, 1, 1 )
shader_param/mainLayerMask = SubResource( 15 )

[sub_resource type="ViewportTexture" id=20]
viewport_path = NodePath("Viewport4")

[node name="root" type="Node2D"]
script = ExtResource( 5 )

[node name="Viewport4" type="Viewport" parent="."]
size = Vector2( 1024, 600 )
size_override_stretch = true
transparent_bg = true
handle_input_locally = false
hdr = false
disable_3d = true
usage = 0
render_direct_to_screen = true
render_target_v_flip = true
render_target_clear_mode = 1
render_target_update_mode = 3

[node name="ColorRect2" type="ColorRect" parent="Viewport4"]
material = SubResource( 11 )
margin_right = 5000.0
margin_bottom = 5000.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="."]
size = Vector2( 1024, 600 )
size_override_stretch = true
transparent_bg = true
handle_input_locally = false

[node name="Node2D" parent="Viewport" instance=ExtResource( 1 )]

[node name="Back" type="Sprite" parent="."]
position = Vector2( 888.75, -938 )
scale = Vector2( 624.906, 42.8125 )
texture = ExtResource( 4 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MainLayer" type="TextureRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = SubResource( 5 )
expand = true
flip_v = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
material = SubResource( 14 )
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Debug" type="Control" parent="CanvasLayer"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Debug"]
margin_right = 1024.0
margin_bottom = 600.0
rect_scale = Vector2( 0.374077, 0.374077 )
texture = SubResource( 20 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSlider" type="SpinBox" parent="CanvasLayer/Debug"]
margin_left = 5.0
margin_top = 237.0
margin_right = 384.0
margin_bottom = 301.0
max_value = 1.0
step = 0.001
value = 0.94
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="value_changed" from="CanvasLayer/Debug/HSlider" to="." method="_on_HSlider_value_changed"]
